# routes/api.php
@@ -1,11 +1,9 @@
 <?php
 
-use App\Http\Controllers\Api\AttachmentController;
+use App\Http\Controllers\Api\ApplicationController;
 use App\Http\Controllers\Api\Auth\AuthController;
 use App\Http\Controllers\Api\Auth\RegisterController;
-use App\Http\Controllers\Api\TicketController;
 use App\Http\Controllers\Api\UserController;
-use App\Http\Controllers\Api\DSGoDataExtraction;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -23,6 +21,7 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::get('/me', [AuthController::class, 'me'])->name('user.profile');
     Route::post('/logout', [AuthController::class, 'logout'])->name('logout');
     Route::apiResource('users', UserController::class)->names('users');
+    Route::apiResource('applications', ApplicationController::class)->names('applications');
     Route::post('/register', [RegisterController::class, 'register'])->name('register');
 });
 
